add users partial crud and remove api_pin
